Added pacman hooks

--- a/etc/sddm.conf.d/kde_settings.conf
+++ b/etc/sddm.conf.d/kde_settings.conf
@@ -1,6 +1,6 @@
 [Autologin]
 Relogin=false
-Session=awesome
+Session=xmonad
 #User=
 
 [General]
@@ -8,7 +8,7 @@ HaltCommand=/usr/bin/systemctl poweroff
 RebootCommand=/usr/bin/systemctl reboot
 
 [Theme]
-Current=dtos-redrock
+Current=multicolor-sddm-theme
 
 [Users]
 MaximumUid=60000
