Updated pacman.conf and calamares

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -77,7 +77,7 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [dtos-core-repo]
-SigLevel = Required DatabaseOptional
+SigLevel = Optional TrustedOnly
 Server = https://gitlab.com/dwt1/$repo/-/raw/main/$arch
 
 [arcolinux_repo_xlarge]
